<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/horarios_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Horarios.viewHorarios"
    tools:showIn="@layout/hor_view_horarios"
    android:background="@color/primary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:theme="@style/cardViewWayBus">

        <TableLayout
            android:id="@+id/tabOrigen_Destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10">

                <ImageView
                    android:id="@+id/imgMapOrigin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@mipmap/ic_pin_map_origin2"
                    android:background="@color/primary_edittext_light"/>

                <EditText
                    android:id="@+id/editOrigen"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="4.75"
                    android:paddingStart="10dp"
                    android:hint="Origen"
                    android:textColorHint="@color/primary_edittext_focus"
                    android:textColor="@color/primary_dark"
                    android:textCursorDrawable="@drawable/color_cursor"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary_dark"/>

                <ImageView
                    android:id="@+id/imgMapDestiny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@mipmap/ic_pin_map_destiny2"
                    android:background="@color/primary_edittext_light"/>

                <EditText
                    android:id="@+id/editDestino"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="4.75"
                    android:paddingStart="10dp"
                    android:hint="Destino"
                    android:textColorHint="@color/primary_edittext_focus"
                    android:textColor="@color/primary_dark"
                    android:textCursorDrawable="@drawable/color_cursor"/>

            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBusIda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@mipmap/ic_bus_ida"/>

            <TextView
                android:id="@+id/tvTituloRuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imgBusIda"
                android:gravity="bottom"
                android:textColor="@color/primary_light"
                android:textSize="22dp"
                android:shadowColor="@color/primary_light"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/tituloRuta"
                android:layout_centerVertical="true"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false" />

            <View
                android:id="@+id/divider_titulo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/imgBusIda"
                android:background="@color/primary_light"/>

            <Button
                android:id="@+id/butHorarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/background_button"
                android:elevation="4dp"
                android:textColor="@color/primary_medium"
                android:textSize="18dp"
                android:shadowColor="@color/primary_medium"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/butHorarios"
                android:layout_above="@+id/divider_titulo"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <TableLayout
            android:id="@+id/tabHorarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <TextView
                    android:id="@+id/colHoraSalidaLlegada"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:theme="@style/column_table_horario"
                    android:text="@string/colHoraSalida"/>

                <TextView
                    android:id="@+id/colDuracion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:theme="@style/column_table_horario"
                    android:text="@string/colDuracion"/>

                <TextView
                    android:id="@+id/colPrecio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/column_table_horario"
                    android:text="@string/colPrecio"/>

                <TextView
                    android:id="@+id/colDiasSemana"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:theme="@style/column_table_horario"
                    android:text="@string/colFrecuencia"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/msgVacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/msg_horario_vacio"
                    android:text="@string/msg_horario_vacio"
                    android:layout_gravity="center_horizontal"
                    android:layout_span="5" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerTableHorarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/msgVacio"
                    android:padding="3dp"
                    android:scrollbars="vertical"
                    android:layout_span="5" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtEstacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textWayBus"
                android:textColor="@color/primary_light"
                android:text="@string/tvEstacion"/>

            <TextView
                android:id="@+id/resultEstacion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/textWayBus"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLinea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textWayBus"
                android:textColor="@color/primary_light"
                android:text="@string/tvLinea"/>

            <TextView
                android:id="@+id/resultLinea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textWayBus"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>